@@ -1,3 +1,12 @@
+2014-08-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>
+
+	Fix convutil buffer preparation for UTF-8.
+
+	* src/convutil.cpp (ConvGetS, ConvPrint):
+	  - Prepare 5 bytes per char for UTF-8 buffer.
+
+	Thanks Sorawee Porncharoenwase for the report via Google+.
+
 2014-08-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>
 
 	Update dictionary from texhyphen SVN.
